# RollerBufferExample

./: CMakeLists.txt  README.md  main.cpp
src/: extendedRollingBuffer.cpp  extendedRollingBuffer.h  simpleLogger.cpp  simpleLogger.h
test/: CMakeLists.txt  testRollingBuffer.cpp
